Add meeting video links, xbox controller links and version numbers

--- a/_drafts/2020-02-04-draft.md
+++ b/_drafts/2020-02-04-draft.md
@@ -34,6 +34,8 @@ CircuitPython, the Adafruit Feather open-format can do a lot, and now they can d
  * [Freedom Wings in production](https://twitter.com/at_makers/status/1223362473677508608) - Twitter.
  * [Adapter turns power wheelchairs into Xbox controllers](https://www.engadget.com/2020/02/02/adapter-turns-wheelchair-into-xbox-controller/) - Engadget.
  * [Connect Power Wheel Chairs Directly To Game Consoles With The Freedom Wing](https://makezine.com/2020/02/03/connect-power-wheel-chairs-directly-to-game-consoles-with-the-freedom-wing/) - MAKE.
+ * [Xbox Adaptive Controller add-on lets you play Rocket League with a power wheelchair](https://www.rockpapershotgun.com/2020/02/02/xbox-adaptive-controller-add-on-lets-you-play-rocket-league-with-a-power-wheelchair/) - Rock, Paper, Shotgun.
+ * [Power wheelchairs are now compatible with the Xbox Adaptive Controller](https://www.polygon.com/2020/1/31/21117414/xbox-adaptive-controller-power-wheelchair-adapter) - Polygon.
  
 ## Get a CLUE!
 
@@ -225,6 +227,8 @@ Open-Source events with Open-Source hardware logo badges / kits ... Here’s a c
 [![OSI](../assets/02042020/2420osi_adafruit.png)](https://opensource.org/contact)
 
 OSI members (Open Source Initiative) get 10% off Adafruit, we trying this out to see how it goes, if you're a member check out the members' welcome email. If you're already a member, get the details from [opensource.org/contact](https://opensource.org/contact)
+
+CircuitPython Weekly Meeting for February 3rd, 2020 [on YouTube](https://youtu.be/ekud1PHkoXg) and on [diode.zone](https://diode.zone/videos/watch/dcf6badd-ff11-41ed-a5d7-766d893e766b)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/01/28/new-mu-open-book-open-hardware-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [HackSpace magazine — Issue 27](https://hackspace.raspberrypi.org/issues/27).
 
@@ -433,13 +437,13 @@ Teardown 2020 is a three-day line up of talks, workshops, demos, installations, 
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [4.1.2](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.0.0-beta.5](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200203](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.1](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a3](https://www.python.org/download/pre-releases/).
 
 [1583 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
