--- a/_drafts/2020-02-11-draft.md
+++ b/_drafts/2020-02-11-draft.md
@@ -79,43 +79,50 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/01mdd2020/bryan.jpg)](https://circuitpython.org/)
+[![Bryan](../assets/0mdd2020/bryan.jpg)](https://circuitpython.org/)
 
 
 
 **Dan**
 
-[![Dan](../assets/01mdd2020/dan.jpg)](https://circuitpython.org/)
+[![Dan](../assets/0mdd2020/dan.jpg)](https://circuitpython.org/)
 
 
 
 **Jeff**
 
-[![Jeff](../assets/01mdd2020/jeff.jpg)](https://circuitpython.org/)
+[![Jeff](../assets/02112020/02112020jeff.jpg)](https://circuitpython.org/)
 
 
+This week I'm building on work by Zoltán Vörös (v923z on github), Andrew Gatherer (@GathererA) , and Thomas Schucker to bring a library called "ulab" to CircuitPython.
+
+ulab is similar to the numpy package for standard Python, and enables efficient operation on arrays of numbers.  ulab is authored primarily by Zoltán Vörös, and Andrew Gatherer did the bulk of converting it so it was ready to be used in CircuitPython.  Their open source code really made this project a breeze!
+
+ulab includes routines for FFTs, so I adapted a demo by Thomas Schucker to compute an audio spectrogram and made it run on the new CLUE board from Adafruit.
+
+It's our hope to enable ulab soon for all nRF boards and almost all "m4" boards supported by CircuitPython!  It slightly missed the deadline for beta 5 because we're working on the documentation.
 
 **Kattni**
 
-[![Kattni](../assets/01mdd2020/kattni.jpg)](https://circuitpython.org/)
+[![Kattni](../assets/0mdd2020/kattni.jpg)](https://circuitpython.org/)
 
 
 
 **Lucian**
 
-[![Lucian](../assets/01mdd2020/lucian.jpg)](https://circuitpython.org/)
+[![Lucian](../assets/0mdd2020/lucian.jpg)](https://circuitpython.org/)
 
 
 
 **Melissa**
 
-[![Melissa](../assets/01mdd2020/melissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/0mdd2020/melissa.jpg)](https://circuitpython.org/)
 
 
 
 **Scott**
 
-[![Scott](../assets/01mdd2020/scott.jpg)](https://circuitpython.org/)
+[![Scott](../assets/0mdd2020/scott.jpg)](https://circuitpython.org/)
 
 
 
