--- a/_drafts/2020-02-11-draft.md
+++ b/_drafts/2020-02-11-draft.md
@@ -110,9 +110,9 @@ It's our hope to enable ulab soon for all nRF boards and almost all "m4" boards 
 
 **Lucian**
 
-[![Lucian](../assets/0mdd2020/lucian.jpg)](https://circuitpython.org/)
+This week I added UF2 support to the STM32 make options. I also started on the STM32F407 Discovery board definition, which unfortunately has gotten caught up in some USB weeds. I also wrapped up the last STM32 issue for 5.0 by adding core temperature, voltage and us delay support. 
 
-
+This week I'm hoping to wrap up my support for the Espruino boards, and also regroup a little and analyze the priorities for the STM32 port overall. I'll also be modifying the UF2 bootloader to better match the behavior of other ports, and making it available to other boards with good external flash support.
 
 **Melissa**
 
