--- a/_drafts/2020-02-11-draft.md
+++ b/_drafts/2020-02-11-draft.md
@@ -104,9 +104,9 @@ It's our hope to enable ulab soon for all nRF boards and almost all "m4" boards 
 
 **Kattni**
 
-[![Kattni](../assets/0mdd2020/kattni.jpg)](https://circuitpython.org/)
+This week I created a library for the new [Adafruit CLUE](https://www.adafruit.com/product/4500). [Adafruit CircuitPython CLUE](https://github.com/adafruit/Adafruit_CircuitPython_CLUE) makes it super simple to use all the features of the board, without the need for all the setup. It provides easy access to all the sensors, buttons, LEDs and touch inputs. As well, it provides an quick way to display lines of text on the display, with customisable colors. This allows you to quickly create a list of sensor data, or any text you'd like. There is a simpletest example that prints sensor data to the serial console, so you can verify that all your sensors are working as expected, as well as an example of how to use the text display feature of the library to show sensor and input data on the display. For more information and examples of each feature, check out the [documentation on Read the Docs](https://circuitpython.readthedocs.io/projects/clue/en/latest/). 
 
-
+The library is available in the [CircuitPython library bundle](https://circuitpython.org/libraries). Testers have already found a couple of issues with it and I've fixed them, so check for updates over the next few weeks as more people start testing it and, as is the way of things, find new bugs. You can always download the latest release from GitHub, but it's best to keep everything up to date with the latest [bundle](https://circuitpython.org/libraries). Next up I'm working on creating a series of examples for CLUE using all of the amazing built in sensors, starting with a height calculator. Keep an eye out for a bunch of fun things you can do with your new Adafruit CLUE!
 
 **Lucian**
 
