--- a/_drafts/2020-02-11-draft.md
+++ b/_drafts/2020-02-11-draft.md
@@ -85,9 +85,13 @@ What is the team up to this week? Let’s check in!
 
 **Dan**
 
-[![Dan](../assets/0mdd2020/dan.jpg)](https://circuitpython.org/)
+[![Dan](../assets/02112020/02112020dan.jpg)](https://circuitpython.org/)
 
+I released CircuitPython 5.0.0-beta.5 on Tuesday evening. The release includes a number of bug fixes and enhancements, and you can now connect to up to five BLE devices instead of just two.
 
+I am working on a CircuitPython BLE bicycle speed and cadence library. I built a jig to simulate a bicycle hub and crank arm (running at the same speed), spun by a motor driven by a Crickit. It was a pleasure to actually use the Crickit library I wrote a long time ago for something other than just testing.
+
+After I finish the bicycle library, I'll be working on increasing the SPI speed on the nRF52840 so we can drive displays more quickly. The nRF52840 can do SPI up to 32MHz on one of its SPI peripherals, but we have to work around some significant hardware bugs to make use of it.
 
 **Jeff**
 
