--- a/_drafts/2020-02-11-draft.md
+++ b/_drafts/2020-02-11-draft.md
@@ -126,9 +126,11 @@ This week I'm hoping to wrap up my support for the Espruino boards, and also reg
 
 **Scott**
 
-[![Scott](../assets/0mdd2020/scott.jpg)](https://circuitpython.org/)
+This week I dove into using Adafruit IO with CircuitPython. Brent, Adam, ladyada, and Justin have done an awesome job getting CircuitPython connected. I'm working to create a simple, but not secure, sensor network using Bluetooth Low Energy advertisements that we're calling BroadcastNet.
 
+In BroadcastNet, one or more bridge devices will listen for broadcasts and use WiFi or Ethernet to log data to an IOT service. I'm using an ItsyBitsy M4 Express with a Airlift Bitsy Wing now. The sensor nodes can be any nRF52840 based board and use any sensors that are connected to it. The broadcast packet format is standardized so that the bridges can listen for multiple sensors and automatically create new feeds for new data.
 
+BroadcastNet will make it very easy to customize your own sensors for whatever purpose you have.
 
 ## Upcoming events!
 
