--- a/_drafts/2020-02-11-draft.md
+++ b/_drafts/2020-02-11-draft.md
@@ -120,9 +120,9 @@ This week I'm hoping to wrap up my support for the Espruino boards, and also reg
 
 **Melissa**
 
-[![Melissa](../assets/0mdd2020/melissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/02112020/02112020melissa.jpg)](https://circuitpython.org/)
 
-
+This past week, I have been heads down mostly working on the WebSerial plotter. I have added features such as a dark mode theme and an XY plot mode for mapping acceleration data. After adding those, I have been combing through the code making improvements for switching seamlessly and other improvements in general.
 
 **Scott**
 
