--- a/_drafts/2020-02-11-draft.md
+++ b/_drafts/2020-02-11-draft.md
@@ -79,9 +79,13 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/0mdd2020/bryan.jpg)](https://circuitpython.org/)
+[![Bryan](../assets/02112020/02112020bryan.jpg)](https://circuitpython.org/)
 
+This week I assembled and tested the Rev B board for the APDS9500 gesture sensor. I then got to work turning my prototype code into something that resembles a CircuitPython driver, followed by writing an Arduino version of the same.This little guy is pretty cool; we've got it fairly reliably detecting up, down, left and right hand waves and we're also getting pretty decent detections of forward and backward motions. There is a lot more this sensor can do but that will probably be it for now. If it proves wildly popular we'll consider adding more.
 
+I also wrote a CircuitPython driver for the DPS310 pressure sensor and helped Kattni with the guide for it. Pressure sensors are pretty cool, and that least right into my next project: I've been working on using the [Feather STM32F405 Express](https://www.adafruit.com/product/4382) and [ST LPS33 Pressure sensor](https://www.adafruit.com/product/4414) to make a CircuitPython powered sip and puff input device.
+
+These helpful tools sense the relative pressure applied to a tube by the user and translates that into an input that their computer can understand. This allows folks who aren't able to use a mouse or keyboard to control their computer by sipping or blowing on the tube. Since we're doing this one in CircuitPython we'll be able to make it super simple to configure things like how much pressure is needed to trigger an input, and what input or input combinations can be triggered by the user.
 
 **Dan**
 
