Added template for CP weekly vid link, v. nums
Still needs vid link added.

--- a/_drafts/2020-02-11-draft.md
+++ b/_drafts/2020-02-11-draft.md
@@ -243,6 +243,8 @@ Troll Hunter – Mycroft’s Position on Patent Trolls - [mycroft.ai](https://my
 
 [![CLUE](../assets/02112020/21120icydnci.gif)](https://www.adafruit.com/clue)
 
+CircuitPython Weekly February 10th, 2020 [on YouTube]().
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/02/04/circuitpython-and-feather-power-wheelchair-as-an-xbox-controller-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [Adafruit CLUE - nRF52840 Express with Bluetooth LE](https://www.adafruit.com/clue). Over the weekend by request, we [have a post on how we named CLUE... CLUE](https://blog.adafruit.com/2020/02/09/got-a-clue-havent-a-clue-time-to-get-a-clue-about-why-we-called-it-clue-product-naming/)!
 
 If you're wondering if your open-source community, project, group, or company should start a newsletter like this one, we posted up some stats and more so folks could get an idea of what newsletters we do and subscriber counts - [Adafruit](https://blog.adafruit.com/2020/02/04/some-newsletter-stats-and-more-adafruit/).
@@ -436,13 +438,13 @@ Teardown 2020 is a three-day line up of talks, workshops, demos, installations, 
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [4.1.2](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.0.0-beta.5](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20190206](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.1](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a3](https://www.python.org/download/pre-releases/).
 
 [1589 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
