Add JEpler's input

--- a/_drafts/2020-02-18-draft.md
+++ b/_drafts/2020-02-18-draft.md
@@ -91,9 +91,11 @@ What is the team up to this week? Let’s check in!
 
 **Jeff**
 
-[![Jeff](../assets/0mdd2020/jeff.jpg)](https://circuitpython.org/)
+[![Jeff](../assets/02182020/20200218jeff.jpg)](https://circuitpython.org/)
 
+I'm going on the road for a couple of weeks and packing just the basics to continue on my work with ulab and JEplayer.
 
+When I'm not sightseeing, I'll be busy with improvements to ulab's numpy compability, and porting JEplayer's UI to the PyPortal Pynt's touchscreen.
 
 **Kattni**
 
