--- a/_drafts/2020-02-18-draft.md
+++ b/_drafts/2020-02-18-draft.md
@@ -99,9 +99,11 @@ When I'm not sightseeing, I'll be busy with improvements to ulab's numpy compabi
 
 **Kattni**
 
-[![Kattni](../assets/0mdd2020/kattni.jpg)](https://circuitpython.org/)
+This week I published the [Introducing Adafruit CLUE](https://learn.adafruit.com/adafruit-clue) guide. This guide has detailed information about all the features of CLUE with a thorough Pinouts page including images and a fancy edge-connector pinout diagram (courtesy of Andrew Tribble!), as well as setup instructions for both Arduino and CircuitPython.
 
+[![Kattni](../assets/02182020/20200218kattni.gif)](https://circuitpython.org/)
 
+Next, I worked on a series of CLUE demos using the new [CLUE library](https://github.com/adafruit/Adafruit_CircuitPython_CLUE): a height calculator, a spirit level, and a temperature and humidity monitor. I put together a quick guide page for each that will be available soon. They can be found under [CLUE CircuitPython Demos](https://learn.adafruit.com/adafruit-clue/clue-circuitpython-demos) in the Introducing Adafruit CLUE guide. The plan is to extend this series of demos. Next up is a compass demo. After that, who knows! There's so many options with the CLUE, the possibilities are endless!
 
 **Lucian**
 
@@ -124,6 +126,8 @@ When I'm not sightseeing, I'll be busy with improvements to ulab's numpy compabi
 ## Upcoming events!
 
 [![PyCascades](../assets/01072020/DATE-pyc.jpg)](https://2020.pycascades.com/)
+
+Delete or move??
 
 Scott is speaking at [PyCascades](https://2020.pycascades.com/) about Python's Next Decade and Us. It's February 8th and 9th, 2020.
 
