--- a/_drafts/2020-02-18-draft.md
+++ b/_drafts/2020-02-18-draft.md
@@ -85,9 +85,11 @@ What is the team up to this week? Let’s check in!
 
 **Dan**
 
-[![Dan](../assets/0mdd2020/dan.jpg)](https://circuitpython.org/)
+This week I fixed several of the remaining issues that needed resolution before we release CircuitPython 5.0.0 for general availability. On nRF boards I coded around a hardware bug, so we can now use the fast SPI peripheral. The CLUE board display is now a lot faster. For all builds, I improved the accuracy of the **time** module functions from milliseconds to microseconds.
 
+I helped Dylan and John Park use the BLE bicycle sensor library I wrote last work for a fun project. You'll be seeing the Learn Guide for it soon.
 
+We had a head-scratching bug about why I2C operations were getting slower and slower when used in a loop. I spent a lot of time on this, but it turns out it had nothing to do with I2C *per se*. Instead was due to a particular pattern storage allocations in the **adafruit_bus_device** library. I made the library more efficient, and the issue provoked Scott to make the storage allocator faster
 
 **Jeff**
 
