add melissa, bryan, scott, edit jeff

--- a/_drafts/2020-02-18-draft.md
+++ b/_drafts/2020-02-18-draft.md
@@ -79,9 +79,17 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/0mdd2020/bryan.jpg)](https://circuitpython.org/)
+[![Bryan](../assets/02182020/20200218bryan2.jpg)](https://circuitpython.org/)
 
+This past week has been a fun time working on a project and guide to make a Sip and Puff device that requires no soldering and very minimal code! I was able to make use of the [Feather STM32F505](https://www.adafruit.com/product/4382) and its built in STEMMA QT connector to easily plug it into an [ST LPS33HW ported pressure sensor](https://www.adafruit.com/product/4414), as well as a STEMMA QT OLED screen to output status and configuration information.
 
+[![Bryan](../assets/02182020/20200218bryan1.jpg)](https://circuitpython.org/)
+
+Along the way I also learned a lot about Assistive Technology and the plethora of makers helping support it and make it more accessible and even more functional. [ATMakers.org](http://atmakers.org/about-us/) and [Makers Making Change](https://www.makersmakingchange.com/about-us/) are two great organizations that are helping get AT devices based on Open Source Hardware and Software into the hands of folks that need it.
+
+I'm happy to do what I can to contribute and while the sip and puff I was able to put together is one among many, I look forward to contributing wherever I can.
+
+The [Sip and Puff guide](https://learn.adafruit.com/st-lps33-and-circuitpython-sip-and-puff) should be out by now, so head over, take a look, and see how you can use it or one of the many other open source AT projects to make a difference for people that need some assistance in doing things that man of us take for granted.
 
 **Dan**
 
@@ -97,7 +105,7 @@ We had a head-scratching bug about why I2C operations were getting slower and sl
 
 I'm going on the road for a couple of weeks and packing just the basics to continue on my work with ulab and JEplayer.
 
-When I'm not sightseeing, I'll be busy with improvements to ulab's numpy compability, and porting JEplayer's UI to the PyPortal Pynt's touchscreen.
+When I'm not sightseeing, I'll be busy with improvements to ulab, a numpy-like package for CircuitPython, and porting JEplayer's UI to the PyPortal Pynt's touchscreen.
 
 **Kattni**
 
@@ -115,15 +123,17 @@ Next, I worked on a series of CLUE demos using the new [CLUE library](https://gi
 
 **Melissa**
 
-[![Melissa](../assets/0mdd2020/melissa.jpg)](https://circuitpython.org/)
+This past week I continued working on WebSerial and adapting it to work with the new CLUE for calibrating the IMU sensor. Unfortunately, I kept running into an issue where it seemed to get overwhelmed by too much data and would slow way down, so I will probably be taking a different approach.
 
-
+In order to gather my thoughts a little better, I switched over to working on Github issues for a few days. I've been focusing mostly on fixing some outstanding display issues and added a couple of new shapes to the Adafruit_CircuitPython_Display_Shapes library. Afterwards, I'll be switching back to working on the CLUE board and IMU sensor again.
 
 **Scott**
 
-[![Scott](../assets/0mdd2020/scott.jpg)](https://circuitpython.org/)
+Last week I continued work on BroadcastNet. I've started getting PRs out, but everything is still pending. This week I'm working on using a Raspberry Pi 3 as a BroadcastNet bridge, with the hope it will be more reliable than an ESP32 wifi link. I'm very excited to use Ethernet for it.
 
+Over the weekend, I attended PyCascades 2020 and it was great to see a bunch of awesome Pythonistas. I was the last talk and the video of it is available here: https://www.youtube.com/watch?v=2WdjlznbD0o&t=29274
 
+This week so far, I took a detour into memory allocation performance after Ladyada and Dan found something really weird. It was a really tight loop reading accelerometer data and storing it, where the gaps between reads increased from 1 ms to 10 ms and then reset. Turns out it was an un-optimized allocation case which I've now optimized as well. So, check out the last builds and let us know how it's (hopefully) improved performance for you.
 
 ## Upcoming events!
 
