Update and rename _drafts/2020-02-18-draft.md to _posts/2020-02-18-draft.md

--- a/_posts/2020-02-18-draft.md
+++ b/_posts/2020-02-18-draft.md
@@ -6,7 +6,7 @@ categories: weekly
 ---
 
 - [X] Kattni updates
-- [ ] Link "View this email in your browser."
+- [X] Link "View this email in your browser."
 
 [View this email]() in your browser.
 
