add dan's input

--- a/_drafts/2020-02-25-draft.md
+++ b/_drafts/2020-02-25-draft.md
@@ -85,9 +85,9 @@ What is the team up to this week? Let’s check in!
 
 **Dan**
 
-[![Dan](../assets/0mdd2020/dan.jpg)](https://circuitpython.org/)
+I'm resolving the remaining few issues we have as blockers before CircuitPython 5.0.0 is released for general availability.
 
-
+I've started investigating BLE-capable thermometers, which are often used for barbecue monitoring or other cooking applications. Unfortunately, all the ones I've encountered use vendor-specific BLE services which we'll need to reverse engineer. There is a standard BLE "Environmental Sensing Service" that includes temperature, including multiple values, but I haven't seen it used.
 
 **Jeff**
 
