--- a/_drafts/2020-02-25-draft.md
+++ b/_drafts/2020-02-25-draft.md
@@ -91,9 +91,9 @@ I've started investigating BLE-capable thermometers, which are often used for ba
 
 **Kattni**
 
-[![Kattni](../assets/0mdd2020/kattni.jpg)](https://circuitpython.org/)
+This week I worked on adding [Adafruit CLUE](https://www.adafruit.com/product/4500) support to the [Adafruit CircuitPython PyBadger](https://github.com/adafruit/Adafruit_CircuitPython_PyBadger) library. PyBadger is a badge-focused library designed around making it super simple to create a Hello My Name Is name badge, display a customised QR code, or a "business card" with an image, name and email address. Adafruit and Digi-Key are [giving away CLUEs to each attendee at PyCon 2020](https://blog.adafruit.com/2020/02/06/get-a-clue-at-pycon-us-from-digi-key-and-adafruit-digikey-adafruit-pycon2020-pycon-circuitpython/), and we wanted to make it easy to quickly create a CLUE badge using CircuitPython. This involved a complete refactor of the library, but resulted in a simpler code structure when using it. Now, you simply import the library, and it automatically detects which supported board you are using, and imports the appropriate features. You no longer need to instantiate the library after importing. To test this, I created a test suite program that utilises every possible feature in the library, with some board detection to include features not applicable to all three boards. The code wasn't pretty, but it made testing all the features of the library with the updates super quick. It also meant I was able to get assistance from Melissa with testing while minimising the amount of effort required on her part - thanks again, Melissa!
 
-
+PyCon 2020 is right around the corner, and I am beginning preparation. One of the things I want to do is go through all the libraries and identify "Good First Issues" and create labeled GitHub issues for each one. Last year at the PyCon Sprints, we had a huge amount of participation, and we were able to facilitate that by having things for everyone to work on regardless of experience level. While hardware was crucial to this, having a list of issues to work on was equally important, as it gave us a place to point people to help them get started on their own. There are plenty of things that need to be done with the libraries that would be great for a beginner to take on, but we don't have GitHub issues for very many of them, explaining what each of them are. I will be creating a document outlining what I'm looking for in a Good First Issue, and covering what the content of the issue should look like. If you're interested in helping, please ping me, @kattni on GitHub or the [Adafruit Discord](https://adafru.it/discord), and I will be happy to include you in the effort.
 
 **Lucian**
 
