--- a/_drafts/2020-02-25-draft.md
+++ b/_drafts/2020-02-25-draft.md
@@ -79,9 +79,11 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/0mdd2020/bryan.jpg)](https://circuitpython.org/)
+This week I started working with two new sensors. The first is the ST LPS25, the little sister to the LPS33. In the same way that the LPS33HW and LPS35HW are close enough that they're a 'family' of sorts, the LPS25 is a member of the LPS2X family. With that in mind, expect to see more siblings in the future.
 
+I wrote and published the CircuitPython and Arduino libraries for the LPS2X family over the last week. The LPS2X family is _similar_ to the LPS3X, most of the operations are very similar, but they're different enough to need a new library. After finishing the libraries I put together some tester code by making a few small tweaks to the code for the LPS3X tester.
 
+As I write this I'm about half way through the Arduino library for the HTS221 Barometric Pressure and Temperature sensor from...  **ST!** (What can I say, they make all kinds of good sensors). This sensor is an admirable little guy, dutifully doing what humidity sensors do, letting you know if you hair will be frizzy because there is too much water floating around in the air! Or if it's to muggy for your [mogwai](https://en.wikipedia.org/wiki/Gremlins).
 
 **Dan**
 
