--- a/_drafts/2020-02-25-draft.md
+++ b/_drafts/2020-02-25-draft.md
@@ -105,9 +105,11 @@ PyCon 2020 is right around the corner, and I am beginning preparation. One of th
 
 **Melissa**
 
-[![Melissa](../assets/0mdd2020/melissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/02252020/02252020melissa.gif)](https://circuitpython.org/)
 
+This last week I started by taking a break from WebSerial for a couple of days and focused on reviewing PRs and fixing issues. I picked back up on creating a 3D Model viewer that worked by taking magnetometer data and changing the rotation of a model. This was done using both Euler angles and Quaternions and I added the ability to select between the two, although quaternions is definitely the preferable method.
 
+After that was wrapped up, I moved over to familiarizing myself with WebBluetooth and adapting the web application to be able to display multiple graphs and other pieces of data in a dashboard style interface.
 
 **Scott**
 
