--- a/_drafts/2020-02-25-draft.md
+++ b/_drafts/2020-02-25-draft.md
@@ -113,9 +113,9 @@ After that was wrapped up, I moved over to familiarizing myself with WebBluetoot
 
 **Scott**
 
-[![Scott](../assets/0mdd2020/scott.jpg)](https://circuitpython.org/)
+At the end of last week I created an Eddystone BLE library for broadcasting URLs. Keep an eye out for a guide from John Park about it.
 
-
+After that I continued work on the Raspberry Pi based BroadcastNet bridge. I've been pushing that work out into libraries including a new Adafruit Blinka bleio library which includes basic scanning support on Linux. I'll also be working to wrap up my changes to ESP32SPI as well.
 
 ## Upcoming events!
 
