Add Lucian update

--- a/_drafts/2020-02-25-draft.md
+++ b/_drafts/2020-02-25-draft.md
@@ -99,9 +99,9 @@ PyCon 2020 is right around the corner, and I am beginning preparation. One of th
 
 **Lucian**
 
-[![Lucian](../assets/0mdd2020/lucian.jpg)](https://circuitpython.org/)
+This week I worked on a large container of ibuprofin, courtesy of Influenza A, which knocked me out for almost a week - the flu vaccine this year missed the common strains, and it's a "double barrel" flu season anyway (both B and A), so remember to wash your hands and stay away from coughing people. 
 
-
+In other news though I've gotten started on the PulseIO module for STM32, following the wrap up of the new Espruino Wifi and Espruino Pico boards, and the addition of the core temperature/voltage module. I'm hoping to get back up to speed this week, with some IR LED testing of the PulseIn and PulseOut modules. 
 
 **Melissa**
 
